--- a/modules/swagger-codegen/src/main/resources/swift3/APIs.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/APIs.mustache
@@ -6,14 +6,18 @@
 
 import Foundation
 
-open class {{projectName}}API {
-    open static var basePath = "{{basePath}}"
-    open static var credential: URLCredential?
-    open static var customHeaders: [String:String] = [:]
-    static var requestBuilderFactory: RequestBuilderFactory = AlamofireRequestBuilderFactory()
-}
-
 open class APIBase {
+    open var basePath = "{{basePath}}"
+    let credential: URLCredential?
+    let customHeaders: [String:String]?
+    let requestBuilderFactory: RequestBuilderFactory
+
+    public init(credential: URLCredential? = nil, customHeaders: [String:String]? = nil) {
+        self.credential = credential
+        self.customHeaders = customHeaders
+        requestBuilderFactory = AlamofireRequestBuilderFactory()
+    }
+
     func toParameters(_ encodable: JSONEncodable?) -> [String: Any]? {
         let encoded: Any? = encodable?.encodeToJSON()
 
@@ -36,7 +40,7 @@ open class RequestBuilder<T> {
     let isBody: Bool
     let method: String
     let URLString: String
-    
+
     /// Optional block to obtain a reference to the request's progress instance when available.
     public var onProgressReady: ((Progress) -> ())?
 
@@ -45,16 +49,14 @@ open class RequestBuilder<T> {
         self.URLString = URLString
         self.parameters = parameters
         self.isBody = isBody
-        
-        addHeaders({{projectName}}API.customHeaders)
     }
-    
+
     open func addHeaders(_ aHeaders:[String:String]) {
         for (header, value) in aHeaders {
             headers[header] = value
         }
     }
-    
+
     open func execute(_ completion: @escaping (_ response: Response<T>?, _ error: Error?) -> Void) { }
 
     public func addHeader(name: String, value: String) -> Self {
@@ -63,9 +65,9 @@ open class RequestBuilder<T> {
         }
         return self
     }
-    
-    open func addCredential() -> Self {
-        self.credential = {{projectName}}API.credential
+
+    open func addCredential(credential: URLCredential) -> Self {
+        self.credential = credential
         return self
     }
 }
@@ -73,4 +75,3 @@ open class RequestBuilder<T> {
 public protocol RequestBuilderFactory {
     func getBuilder<T>() -> RequestBuilder<T>.Type
 }
-
