swift3: fix for map models

--- a/modules/swagger-codegen/src/main/resources/swift3/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/model.mustache
@@ -23,7 +23,12 @@ public enum {{classname}}: {{dataType}} {
 {{/isEnum}}
 {{^isEnum}}
 {{#vars.isEmpty}}
-public typealias {{classname}} = {{dataType}}
+{{#parent}}
+public typealias {{classname}} = {{{parent}}}
+{{/parent}}
+{{^parent}}
+public typealias {{classname}} = {{datatype}}
+{{/parent}}
 {{/vars.isEmpty}}
 {{^vars.isEmpty}}
 open class {{classname}}: {{#parent}}{{{parent}}}{{/parent}}{{^parent}}JSONEncodable{{/parent}} {
