--- a/modules/swagger-codegen/src/main/resources/swift3/Extensions.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/Extensions.mustache
@@ -65,15 +65,28 @@ extension Data: JSONEncodable {
     }
 }
 
-private let dateFormatter: DateFormatter = {
+private let dateTimeFormatter: DateFormatter = {
     let fmt = DateFormatter()
     fmt.dateFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZZZZZ"
     fmt.locale = Locale(identifier: "en_US_POSIX")
     return fmt
 }()
 
+private let dateFormatter: DateFormatter = {
+    let fmt = DateFormatter()
+    fmt.dateFormat = "yyyy-MM-dd"
+    fmt.locale = Locale(identifier: "en_US_POSIX")
+    return fmt
+}()
+
 extension Date: JSONEncodable {
     func encodeToJSON() -> Any {
+        return dateTimeFormatter.string(from: self) as Any
+    }
+}
+
+extension Date {
+    func encodeDateToJSON() -> Any {
         return dateFormatter.string(from: self) as Any
     }
 }
