swift3: add timberjack for request and response logging

--- a/modules/swagger-codegen/src/main/resources/swift3/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/AlamofireImplementations.mustache
@@ -5,6 +5,7 @@
 //
 
 import Alamofire
+import Timberjack
 
 class AlamofireRequestBuilderFactory: RequestBuilderFactory {
 
@@ -26,7 +27,7 @@ open class AlamofireRequestBuilder<T>: RequestBuilder<T> {
      configuration.
      */
     open func createSessionManager() -> Alamofire.SessionManager {
-        let configuration = URLSessionConfiguration.default
+        let configuration = Timberjack.defaultSessionConfiguration()
         configuration.httpAdditionalHeaders = buildHeaders()
         return Alamofire.SessionManager(configuration: configuration)
     }
