--- a/modules/swagger-codegen/src/main/resources/swift3/Podspec.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/Podspec.mustache
@@ -18,4 +18,5 @@ Pod::Spec.new do |s|
   s.dependency 'PromiseKit', '~> 4.0'{{/usePromiseKit}}{{#useRxSwift}}
   s.dependency 'RxSwift', '~> 3.0.0-beta.1'{{/useRxSwift}}
   s.dependency 'Alamofire', '~> 4.0'
+  s.dependency 'Timberjack', :git => 'https://github.com/andysmart/Timberjack.git', :branch => 'master'
 end
