--- a/modules/swagger-codegen/src/main/resources/swift3/Extensions.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/Extensions.mustache
@@ -67,7 +67,7 @@ extension Data: JSONEncodable {
 
 private let dateTimeFormatter: DateFormatter = {
     let fmt = DateFormatter()
-    fmt.dateFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZZZZZ"
+    fmt.dateFormat = "yyyy-MM-dd HH:mm"
     fmt.locale = Locale(identifier: "en_US_POSIX")
     return fmt
 }()
