Missing percent encoding in url

--- a/modules/swagger-codegen/src/main/resources/swift3/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/AlamofireImplementations.mustache
@@ -333,6 +333,6 @@ struct CustomURLEncoding: ParameterEncoding {
             newUrlString.replaceSubrange(range, with: originalQuery.replacingOccurrences(of: "[]=", with: "="))
         }
 
-        return newUrlString
+        return newUrlString.addingPercentEncoding(withAllowedCharacters: CharacterSet.urlQueryAllowed)!
     }
 }
