Validation status code added to ErrorResponse

--- a/modules/swagger-codegen/src/main/resources/swift3/AlamofireImplementations.mustache
+++ b/modules/swagger-codegen/src/main/resources/swift3/AlamofireImplementations.mustache
@@ -270,6 +270,7 @@ fileprivate func makeErrorResponse(withStatusCode statusCode: Int?, data: Data?,
             let body = Decoders.decode(clazz: ValidationError.self, source: json as AnyObject)
             errorResponse.validationErrorMessage = body.message
             errorResponse.validationErrorDetails = body.details
+            errorResponse.validationErrorCode = body.code
         }
     }
     return errorResponse
